add: admin plugin, update packages & switch to pg

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 BETTER_AUTH_SECRET="SxmRoYEvZZtUyy7mJvB+PsnzNJiyNV6WDTM1HhwBiTc="
-DATABASE_URL=http://localhost:8080
+DATABASE_URL="postgresql://postgres:password@localhost/app"
 BETTER_AUTH_URL=http://localhost:3000
 APP_NAME="Nuxt&Bolts"
 SMTP_HOST="127.0.0.1"
