--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nuxt-app",
   "type": "module",
   "private": true,
+  "packageManager": "pnpm@10.15.0",
   "scripts": {
     "build": "pnpm build:emails && nuxt build",
     "build:emails": "tsc -p tsconfig.emails.json",
@@ -22,7 +23,7 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^5.2.0",
+    "@antfu/eslint-config": "^5.2.2",
     "@nuxt/eslint": "1.5.2",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "1.15.0",
@@ -31,53 +32,55 @@
     "@nuxtjs/i18n": "9.5.6",
     "@nuxtjs/seo": "3.1.0",
     "@pinia/nuxt": "0.11.1",
-    "@react-email/components": "^0.5.0",
-    "@react-email/render": "^1.2.0",
-    "@tailwindcss/vite": "^4.1.11",
+    "@react-email/components": "^0.5.2",
+    "@react-email/render": "^1.2.2",
+    "@tailwindcss/vite": "^4.1.13",
     "@vee-validate/zod": "^4.15.1",
-    "@vueuse/core": "^13.6.0",
-    "better-auth": "^1.3.4",
+    "@vueuse/core": "^13.9.0",
+    "better-auth": "^1.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.44.4",
-    "eslint": "^9.32.0",
+    "drizzle-orm": "^0.44.5",
+    "eslint": "^9.35.0",
     "lucide-vue-next": "^0.525.0",
-    "motion-v": "^1.7.0",
-    "nodemailer": "^7.0.5",
-    "nuxt": "^4.0.3",
+    "motion-v": "^1.7.1",
+    "nodemailer": "^7.0.6",
+    "nuxt": "^4.1.1",
+    "pg": "^8.16.3",
     "pinia": "^3.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "reka-ui": "^2.4.1",
+    "reka-ui": "^2.5.0",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.6",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
     "vee-validate": "^4.15.1",
-    "vue": "^3.5.18",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1",
-    "vue-sonner": "^2.0.2",
+    "vue-sonner": "^2.0.8",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@iconify-json/devicon": "^1.2.36",
+    "@iconify-json/devicon": "^1.2.43",
     "@iconify-json/uil": "^1.2.3",
     "@nuxt/test-utils": "^3.19.2",
     "@react-email/preview-server": "4.2.8",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.1.9",
+    "@types/nodemailer": "^7.0.1",
+    "@types/pg": "^8.15.5",
+    "@types/react": "^19.1.12",
     "@vue/test-utils": "^2.4.6",
     "better-sqlite3": "^12.2.0",
-    "concurrently": "^9.2.0",
-    "dotenv": "^17.2.1",
+    "concurrently": "^9.2.1",
+    "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
     "eslint-plugin-format": "^1.0.1",
     "happy-dom": "^18.0.1",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.4",
-    "playwright-core": "^1.54.2",
+    "lint-staged": "^16.1.6",
+    "playwright-core": "^1.55.0",
     "react-email": "4.2.8",
     "vitest": "^3.2.4"
   },
